# routes/index.js
@@ -4,9 +4,9 @@ router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => { 
     //#swagger.tags=['Hello World']
-    res.send('Hello World'); 
+    res.send('Hello Worldddddd'); 
 });
 
-router.use('/users', require('./users'));
+router.use('/vehicles', require('./vehicles'));
 
 module.exports = router;
